updated app to get items to add to cart

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,9 @@
-<h1>Rachels Checkout Cart</h1>
-
+<div class= "row">
+  <div class="col-md-10 text-left">
+    <h3>Rachels Checkout Cart</h3>
+    <br>
+  </div>
+</div>
 <div class="shopping-cart">
   <%= render "shopping_cart" %>
 </div>
