--- a/app/views/carts/_cart_row.erb
+++ b/app/views/carts/_cart_row.erb
@@ -4,13 +4,19 @@
     <div class="col-xs-8">
       <h4> <%= product.name %></h4>
       </div>
-    <div class ="col-xs-4">
+    <div class ="col-xs-5">
       <%= form_for product_item, remote: true do |f| %>
         <%= f.label 'Price:' %>
         <%= f.number_field :quantity, value: product_item.quantity.to_i, class: "form-control", min:1 %>
         <%= f.hidden_field :product_id, value: product.id %>
         <%= f.submit 'Update Quantity'%> <br>
-        <%= button_to "Delete", product_item, {data: { confirm: "Are you sure you want to delete the dessert '#{product_item.product.name}' from your cart?" }, method :delete, remote:true, class: "btn btn-danger"} %>
-        <%= f.label 'Total Price: ', number_to_currency product_item.total_price %>
-
+        <%= button_to "Delete", product_item, {data: { confirm: "Are you sure you want to delete the dessert '#{product_item.product.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger"} %>
+        <h4>
+        <%= f.label 'Total Price: '%>
+        <%= number_to_currency product_item.total_price %>
+        </h4>
       <% end %>
+      </div>
+
+    </div>
+  </div>
