--- a/app/views/carts/_shopping_cart.erb
+++ b/app/views/carts/_shopping_cart.erb
@@ -1,4 +1,4 @@
-<%= if !product_item.nil? && product.item.errors.any %>
+<% if !@product_item.nil? && @product_item.errors.any? %>
 <div class="alert something is wrong">
   <ul>
     <% @product_item.errors.full_messages.each do |message| %>
@@ -6,11 +6,16 @@
     <% end %>
   </ul>
 </div>
+<% end %>
 <% if @product_items.size == 0 %>
-<p>
-  There are no items in your shopping cart. Please go back to the <%= link_to, "Dessert page", home_path %> and add some items to your cart.
-</p>
-  <% else %>
+<div class = "row">
+  <div class="col-xs-12 col-md-8">
+  <p class ="text-center">
+    There are no items in your shopping cart. Please go back to the <%= link_to "Dessert page", home_path %> and add some items to your cart.
+  </p>
+  </div>
+</div>
+<% else %>
   <% @product_items.each do |product_item| %>
   <%= render 'carts/cart_row', product: product_item.product, product_item: product_item, show_total: true %>
   <% end %>
