--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
 <div class= "row">
   <div class="col-md-10 text-left">
-    <h3>Rachels Checkout Cart</h3>
+    <h3>Rachels Cart</h3>
     <br>
   </div>
 </div>
