--- a/app/views/layouts/_cart_text.erb
+++ b/app/views/layouts/_cart_text.erb
@@ -1,1 +1,1 @@
-<%= link_to "#{current_order.product_items.size} Items in Cart (#{number_to_currency current_order.subtotal})", cart_path, class: "btn btn-link" %>
+<%= link_to "#{current_order.product_items.size} Item(s) in Cart (#{number_to_currency current_order.subtotal})", cart_path, class: "btn btn-link" %>
