--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Rachels Dessert App</title>
-    <!--  csp_meta_tag -->
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <% if request.ssl? %>
       <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
       <%= javascript_include_tag 'https://macdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
@@ -11,16 +10,22 @@
       <%= stylesheet_link_tag 'http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
       <%= javascript_include_tag 'http://macdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %>
       <% end %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-
+    <%= csp_meta_tag %>
   </head>
 
   <body>
-    <div class="col-md-10 text-left">
-      <h1> <%= link_to 'Rachels Desserts', home_path %> </h1>
+    <div class="row">
+      <div class="col-xs-10 col-md-6 text-left">
+        <h1> <%= link_to 'Rachels Desserts', home_path %> </h1>
+      </div>
     </div>
-      <h2 class="cart-text"> <%= render 'layouts/cart_text' %> </h2>
+    <div class="row">
+      <div class="col-xs-5 text-left">
+        <h2 class="cart-text"><%= render 'layouts/cart_text' %></h2>
+      </div>
+    </div>
     <%= yield %>
   </body>
 </html>
