--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,9 +1,11 @@
 
-<div class="row">
-  <div class="col-xs-6 col-xs-offset-3">
-    <h1>Desserts for Sale</h1>
+<div>
+    <h2 class="center-text">Desserts for Sale</h2>
+<div class="dessert-box">
  <% @products.each do |product| %>
-      <%= render "product_row", product: product, product_item: @product_item %>
+        <div style="width: 450px; margin-bottom: 2%;">
+          <%= render "product_row", product: product, product_item: @product_item %>
+        </div>
     <% end %>
-  </div>
+    </div>
 </div>
