--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,127 @@
  *= require_tree .
  *= require_self
  */
+/*-----NAV BAR-----*/
 
- 
+
+
+
+
+
+/*-----BASIC CSS FOR SITE-----*/
+body {
+  background-image: linear-gradient(#1e4b5a, #badaed);
+
+}
+
+.cart-title{
+   font-size: 2em;
+ }
+
+.dessert-box {
+  display: flex;
+  flex-flow: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: space-around;
+}
+
+.center-text {
+  text-align: center;
+}
+
+.dessert-img {
+  padding: .5%;
+}
+
+img {
+  border-radius: 10px;
+}
+
+.price-color {
+  color: #fff
+}
+
+.header {
+  display: flex;
+  flex-flow: row wrap;
+  text-align: center;
+  /* margin-left: 33%; */
+  /* padding-left: 34% */
+}
+
+.header > * {
+  flex: 1 100%;
+}
+
+/* .cart {
+  border: 1px solid;
+} */
+
+/* -----WAVVES----- */
+
+/*
+There are 4 css properties you can animate
+that require little-to-no work for the
+browser to render. That's:
+- opacity
+- transform: translate(x, y)
+- transform: scale(2)
+- transform: rotate(15deg)
+
+...or shorthand:
+transform: translate(-20px, 20px) rotate(10deg) scale(2);
+*/
+.waves {
+    background: no-repeat url('http://www.rachelsfireisland.com/wp-content/uploads/2017/12/test.jpg') center top;
+    background-size: cover;
+    height: 22.5vw;
+    overflow: hidden;
+    position: absolute;
+    width: 100vw;
+    z-index: -1
+}
+
+.waves-overlay,
+.waves-another-overlay,
+.wavves-overlay-damn {
+    animation: wavves 2s ease-in-out 0s infinite alternate;
+    background: inherit;
+    background-size: inherit;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.waves-anoather-overlay {
+    animation-direction: alternate-reverse;
+}
+.wavves-overlay-damn {
+    animation-name: vv;
+}
+
+@keyframes wavves {
+    0% {
+        opacity: 0.5;
+        transform: scaleY(1);
+    }
+    100% {
+        opacity: 1;
+        transform: scaleY(1.15);
+    }
+}
+
+@keyframes vv{
+    0% {
+        opacity: 0;
+        transform: scaleX(1);
+    }
+    100% {
+        opacity: 0.5;
+        transform: scaleX(1.05);
+    }
+}
+
+/*----SHOPPING CART-----*/
