--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,9 @@
 <div class= "row">
-  <div class="col-md-10 text-left">
-    <h3>Rachels Cart</h3>
+  <div class="col-xs-5">
+    <span class="cart-title">Rachels Cart </span>
+    <span class="cart-subtitle"><%= link_to "Checkout", checkout_path, class: "btn btn-primary btn-sm" %> </span>
     <br>
   </div>
 </div>
-<div class="shopping-cart">
-  <%= render "shopping_cart" %>
+    <%= render "shopping_cart" %>
 </div>
