--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -8,19 +8,130 @@
 // }
 
 
-.checkout-panel {
+/*-----CART CSS-----*/
+
+.checkout_button {
+  /* display: flex;
+  flex-flow: row; */
+  position: fixed;
+  z-index: 100;
+  right: 162px;
+  bottom: 100px;
+}
+
+// .cart-border {
+//   border: 2px solid;
+// }
+.cart-items-container {
+}
+
+.cart-header {
+  text-align: left;
+  font-size: 3em;
+}
+
+// .product-headers {
+//   flex-flow: wrap;
+//   flex-direction: row;
+//   justify-content: space-around;
+// }
+
+.cart-container {
+  background-color: #fff;
+  height: 100%;
+  margin-top: 0;
+}
+
+.cart-labels {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 700px;
-  background-color: #fff;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .2);
-  margin-top: 200px;
-  padding-bottom: 100px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+  text-align: center;
+  margin-bottom: 1vh;
+  border-style: inset;
 }
+
+//------Label Classes----------
+
+.name-label {
+  width: 15%;
+}
+
+.description-label {
+  width: 25%;
+}
+.price-label {
+  width: 10%;
+}
+
+.quantity-label {
+  width: 30%;
+}
+
+.button-space {
+  width: 10%;
+}
+
+.total-price-label {
+  width: 10%;
+}
+
+
+//-----------CART CONTENT CLASSES---------
+.cart-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+  text-align: center;
+  margin-bottom: 3vh;
+}
+
+.cart-pic {
+  // padding-left: -90px;
+  width: 15%;
+}
+.cart-description {
+  width: 25%;
+}
+.cart-price {
+  color: green;
+  width: 10%;
+}
+.form-inline {
+  width: 30%;
+}
+
+.cart-quantity {
+  width: 60%;
+  inline-block: center;
+}
+
+.cart-remove-button {
+  width: 10%;
+  z-index: 200;
+}
+.cart-total-price {
+  width: 10%;
+}
+
+//----CHECKOUT PAYMENT PAGE --------
+
+.checkout-panel {
+  // width: 100%;
+  // height: 700px;
+  // background-color: #fff;
+  // box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .2);
+  // margin-top: 200px;
+  // padding-bottom: 100px;
+}
+
 .panel-body {
-  padding: 100px 80px 0;
-  flex: 1;
+  background-color: #fff;
+
 }
 
 .title {
