--- a/app/views/carts/_shopping_cart.erb
+++ b/app/views/carts/_shopping_cart.erb
@@ -1,5 +1,5 @@
 <% if !@product_item.nil? && @product_item.errors.any? %>
-<div class="alert something is wrong">
+<div class="alert-something-is-wrong">
   <ul>
     <% @product_item.errors.full_messages.each do |message| %>
     <li> <%= message %> </li>
@@ -16,7 +16,13 @@
   </div>
 </div>
 <% else %>
-  <% @product_items.each do |product_item| %>
-  <%= render 'carts/cart_row', product: product_item.product, product_item: product_item, show_total: true %>
-  <% end %>
+    <% @product_items.each do |product_item| %>
+      <%= render 'carts/cart_row', product: product_item.product, product_item: product_item, show_total: true %>
+    <% end %>
+  <div class="text-right">
+    <h4>Subtotal <%= number_to_currency current_order.subtotal %></h4>
+  </div>
+  <div class="checkout_button">
+    <%= link_to "Checkout", checkout_path, class: "btn btn-primary btn-lg" %>
+  </div>
 <% end %>
