--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,16 +15,49 @@
  */
 /*-----NAV BAR-----*/
 
+body {
+  min-width: 1000px;
+  margin: 0;
+}
 
+/* padding is clockwise */
+/* each em is 16*/
 
+ul.topnav {
+  list-style-type: none;
+  margin-top: 8.5vh;
+  padding: 0;
+  overflow: hidden;
+  background-color: #101B22;
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+}
 
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 5px 18px;
+  text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {background-color: #213543;}
+
+ul.topnav li a.active {background-color: #4CAF50;}
+
+ul.topnav li.right {float: right;}
+
+@media screen and (max-width: 600px) {
+  ul.topnav li.right,
+  ul.topnav li {float: none;}
+}
 
 
 /*-----BASIC CSS FOR SITE-----*/
-body {
-  background-image: linear-gradient(#1e4b5a, #badaed);
 
-}
 
 .cart-title{
    font-size: 2em;
@@ -32,8 +65,8 @@ body {
 
 .dessert-box {
   display: flex;
-  flex-flow: wrap;
   flex-direction: row;
+  flex-flow: wrap;
   justify-content: space-evenly;
   align-content: space-around;
 }
@@ -55,15 +88,20 @@ img {
 }
 
 .header {
-  display: flex;
-  flex-flow: row wrap;
-  text-align: center;
-  /* margin-left: 33%; */
-  /* padding-left: 34% */
+  font-size: 3em;
+  text-align: left;
+  font-family: cursive, fantasy;
+  min-width: unset;
 }
 
 .header > * {
   flex: 1 100%;
+}
+
+@media screen and (min-width: 1000px) {
+  .header {
+    text-align: center;
+  }
 }
 
 /* .cart {
@@ -87,11 +125,19 @@ transform: translate(-20px, 20px) rotate(10deg) scale(2);
 .waves {
     background: no-repeat url('http://www.rachelsfireisland.com/wp-content/uploads/2017/12/test.jpg') center top;
     background-size: cover;
-    height: 22.5vw;
     overflow: hidden;
     position: absolute;
+    height: inherit;
+    min-width: 1000px;
     width: 100vw;
-    z-index: -1
+    z-index: -1;
+    background-position: 0 -95px;
+}
+
+.banner {
+  height: 19vw;
+  min-height: 50px;
+  width: inherit;
 }
 
 .waves-overlay,
@@ -101,10 +147,12 @@ transform: translate(-20px, 20px) rotate(10deg) scale(2);
     background: inherit;
     background-size: inherit;
     height: 100%;
+    min-height: inherit;
     left: 0;
     position: absolute;
     top: 0;
-    width: 100%;
+    width: 100vw;
+    min-width: 1000px;
 }
 
 .waves-anoather-overlay {
