--- a/app/views/carts/checkout.erb
+++ b/app/views/carts/checkout.erb
@@ -39,7 +39,7 @@
     </div>
 
     <div class="panel-footer">
-      <button class="btn back-btn">Back</button>
+      <%= link_to "Back", cart_path, class: "btn btn-primary" %>
       <button class="btn next-btn">Next Step</button>
     </div>
   </div>
