--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,6 @@
-<div class= "row">
-  <div class="col-xs-5">
-    <span class="cart-title">Rachels Cart </span>
-    <span class="cart-subtitle"><%= link_to "Checkout", checkout_path, class: "btn btn-primary btn-sm" %> </span>
-    <br>
-  </div>
-</div>
-    <%= render "shopping_cart" %>
+<div class="cart-container">
+  <p class="cart-header">Rachel's Cart</p>
+    <div class="cart-items-container">
+      <%= render "shopping_cart" %>
+    </div>
 </div>
