--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,10 @@
         <div class="header">
           <p> <%= link_to 'Rachels Desserts', home_path %> </p>
         </div>
-      </div>
+        <div class="rachels-logo">
+          <%= link_to image_tag("logos/rachels_logo.png", size:'150'), home_path %>
+        </div>
+      </div> <!-- end of baner div -->
       <!-- <div style="text-align: right; margin-right: 50px;">
       </div> -->
     <%= yield %>
