--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,8 @@
 /*-----NAV BAR-----*/
 
 body {
-  min-width: 1000px;
   margin: 0;
+  background-image: linear-gradient(#1e4b5a, #badaed);
 }
 
 /* padding is clockwise */
@@ -25,11 +25,9 @@ body {
 
 ul.topnav {
   list-style-type: none;
-  margin-top: 8.5vh;
   padding: 0;
   overflow: hidden;
   background-color: #101B22;
-  position: absolute;
   width: 100%;
   z-index: 0;
 }
@@ -40,7 +38,7 @@ ul.topnav li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 5px 18px;
+  padding: 8px 18px;
   text-decoration: none;
 }
 
@@ -103,6 +101,11 @@ img {
     text-align: center;
   }
 }
+.rachels-logo {
+  position: relative;
+  left: 10px;
+  bottom: 20px;
+}
 
 /* .cart {
   border: 1px solid;
@@ -135,7 +138,7 @@ transform: translate(-20px, 20px) rotate(10deg) scale(2);
 }
 
 .banner {
-  height: 19vw;
+  height: 17vw;
   min-height: 50px;
   width: inherit;
 }
