--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,16 @@
         <div class="header">
           <p> <%= link_to 'Rachels Desserts', home_path %> </p>
         </div>
+          <div class="rachels-logo">
+            <%= link_to image_tag("logos/rachels_logo.png", size:'145'), home_path %>
+          </div>
+
+      <div class="footer">
+        <div class="footer-text">
+          <!-- © 2017 Rachels Fire Island. All Rights Reserved -->
+        </div>
       </div>
+    </div>
       <!-- <div style="text-align: right; margin-right: 50px;">
       </div> -->
     <%= yield %>
