was in the process of adding footer, also updated Rachels to include apostrophe"

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         <li class="right"><a <%= link_to image_tag("logos/cookie_logo.png", size:'20'), cart_path %> </a></li>
       </ul>
         <div class="header">
-          <p> <%= link_to 'Rachels Desserts', home_path %> </p>
+          <p> <%= link_to 'Rachel\'s Desserts', home_path %> </p>
         </div>
           <div class="rachels-logo">
             <%= link_to image_tag("logos/rachels_logo.png", size:'145'), home_path %>
