updaed some styling

--- a/app/views/carts/_cart_row.erb
+++ b/app/views/carts/_cart_row.erb
@@ -26,7 +26,7 @@
           <span><%= image_tag(product.img_location, size:'150') %></span>
         </div>
         <div class="cart-description">
-          <p>This is my amzing dessert. It is amazing!!!</p>
+          <p>This is my amazing dessert. It is amazing!!!</p>
         </div>
 
         <div class="cart-price">
