update the version of ruby and bundle

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Rachels Dessert App</title>
+    <link rel="shortcut icon" href="/assets/images/logos/rachels_logo.png"/>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <% if request.ssl? %>
       <%= stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' %>
